--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     ports:
       - "5173:5173"  
     networks:
-      - mern
+      - mern_network
     environment:
       REACT_APP_API_URL: http://backend:5050 
 
